--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,329 @@
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Nunito&display=swap');
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+input,
+button,
+textarea {
+    font: inherit;
+}
+
+:root {
+    --FF: "Nunito", sans-serif;
+    --FF-Headings: 'Fugaz One', cursive;
+    --FS: clamp(1rem, 2,2vh, 1,5rem);
+
+    --bgcolor-fade: rgb(252, 220, 160);
+    --bgcolor: orange;
+    --bgimage: linear-gradient(to bottom, var(--bgcolor), var(--bgcolor-fade));
+    --body-bgcolor: #ccc;
+    --border-color: #333;
+    --button-color: #fff;
+    --font-color: #121212;
+    --header-bgcolor: #000;
+    --header-color: #fff;
+    --hero-bgcolor: rgba(51, 178, 51, 0.75);
+    --hero-color: #fff;
+    --higlight-color: rgb(25, 146, 25);
+    --link-active: orange;
+    --link-color: #000;
+    --link-hover: hsla(0, 0%, 0%, .6);
+    --nav-bgcolor: #fff;
+
+    --borders: 2px solid var(--border-color);
+    --border-radius: 15px;
+
+    --padding-tb: 0.25em;
+    --padding-side: 2.5%;
+
+    --margin: clamp(1em, 2.5vh, 1.5em) 0;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --bgcolor-fade: gray;
+        --bgcolor: #000;
+        --body-bgcolor: #333;
+        --border-color: whitesmoke;
+        --button-color: black;
+        --font-color: whitesmoke;
+        --header-color: whitesmoke;
+        --hero-color: #333;
+        --highlight-color: whitesmoke;
+        --link-active: rgb(252, 200, 103);
+        --link-color: whitesmoke;
+        --link-hover: orange;
+        --nav-bgcolor: rgb{20, 20, 20};
+    }
+}
+
+.offscreen {
+    position: absolute;
+    left: -10000px;
+}
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.center {
+    text-align: center;
+}
+
 html {
-    font-size: 18px;
+    scroll-behavior: smooth;
+    font-size: var(--FS);
+    font-family: var(--FF);
+    background-color: var(--bgcolor);
+    background-image: var(--bgimage);
 }
 
 body {
-    background-color: darkolivegreen;
+    background-color: var(--body-bgcolor);
+    color: var(--font-color);
     min-height: 100vh;
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
-    border-left: 1px solid #333;
-    border-right: 1px solid #333;
+    border-left: var(--borders);
+    border-right: var(--borders);
+    box-shadow: 0 0 10px var(--border-color);
 }
 
-th, td, caption {
-    border: 1px solid #333;
-    font-family: 'Courier New', Courier, monospace;
-    border-collapse: separate;
-    padding: 10px;
-    box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.2);
+h1, h2, h3 {
+    font-family: var(--FF-Headings);
+    letter-spacing: 0.1em;
+}
+
+h2, h3 {
+    margin-bottom: 1em;
+    color: var(--higlight-color);
+}
+
+p {
+    line-height: 1.5;
+}
+
+a:any-link {
+    color: var(--link-color);
+}
+
+a:hover, a:focus-visible {
+    color: var(--link-hover);
+}
+
+a:active {
+    color: var(--link-active);
+}
+
+.header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.header-h1 {
+    text-align: center;
+    background-color: var(--header-bgcolor);
+    color: var(--header-color);
+    padding: var(--padding-tb) var(--padding-side);
+}
+
+.header-nav {
+    background-color: var(--nav-bgcolor);
+    border-bottom: var(--borders);
+    font-weight: bold;
+    box-shadow: 0 8px 8px -5px var(--border-color);
+}
+
+.header-ul {
+    padding: var(--padding-tb) var(--padding-side);
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+
+.hero {
+    position: relative;
+}
+
+.hero-h2 {
+    background-color: var(--hero-bgcolor);
+    color: var(--hero-color);
+    padding: .25em .5em;
+    letter-spacing: .1rem;
+    text-shadow: 2px 2px 5px var(--border-color);
+    position: absolute;
+    top: -100px;
+    left: 20px;
+    animation: showWelcome 0.5s ease-in-out 1s forwards;
+}
+
+@keyframes showWelcome {
+    0% {
+        top: -20px;
+        transform: skew(0deg, -5deg) scaleY(0);
+    }
+
+    80% {
+        top: 30px;
+        transform: skew(10deg, -5deg) scaleY(1.2);
+    }
+
+    100% {
+        top: 20px;
+        transform: skew(-10deg, -5deg) scaleY(1);
+    }
+}
+
+.footer {
+    position: sticky;
+    bottom: 0;
+    background-color: var(--header-bgcolor);
+    color: var(--header-color);
+    text-align: center;
+    padding: var(--padding-tb) var(--padding-side);
+}
+
+.main {
+    padding: var(--padding-tb) var(--padding-side);
+}
+
+.main-article {
+    scroll-margin-top: 6.5rem;
+    margin: var(--margin);
+}
+
+.main-article:first-child {
+    margin-top: 1em;
+}
+
+.main-article:last-child {
+    min-height: calc(100vh - 20rem);
+}
+
+.about-trivia {
+    margin: var(--margin);
+}
+
+.about-answer {
+    margin-top: 1em;
+}
+
+.contact-h2 {
+    margin: 0;
+}
+
+.contact-fieldset {
+    border: none;
+}
+
+.contact-p {
+    margin: 1em 0;
+}
+
+.contact-label {
+    display: block;
+    font-weight: bold;
+}
+
+.contact-input,
+.contact-textarea {
+    padding: .5em;
+    border-radius: var(--border-radius);
+    border-width: 2px;
+    width: 100%;
+}
+
+.contact-button {
+    padding: .5em 2em;
+    border-radius: var(--border-radius);
+    background-color: var(--higlight-color);
+    color: var(--button-color);
+    font-weight: bold;
+}
+
+thead, tbody, tfoot, tr {
+    display: contents;
+}
+
+.menu-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 
+    "hd1 hd2 hd3"
+    "cr cr1 cr1p"
+    "cr cr2 cr2p"
+    "cr cr3 cr3p"
+    "sf sf1 sf1p"
+    "sf sf2 sf2p"
+    "sf sf3 sf3p"
+    "cs cs cs";
+    gap: .1em;
+    margin-bottom: 1em;
+}
+
+.menu-cr {
+    grid-area: cr;
+}
+
+.menu-sf {
+    grid-area: sf;
+}
+
+.menu-cs {
+    grid-area: cs;
+}
+
+.menu-cr, .menu-sf, .menu-cs, .menu-header {
+    color: var(--higlight-color);
+    font-weight: bold;
+    height: 100%;
+    display: grid;
+    place-content:  center;
+}
+
+.menu-header, .menu-item {
+    width: 100%;
+    padding: 1em;
+    border: medium ridge var(--border-color);
+}
+
+.menu-item {
+    display: grid;
+    place-content: center;
+}
+
+thead th:first-child {
+    border-top-left-radius: var(--border-radius);
+}
+
+thead th:last-child {
+    border-top-right-radius: var(--border-radius);
+}
+
+tfoot td {
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+}
+
+@media screen and (min-width: 576px) {
+    .menu-header,
+    .menu-cr,
+    .menu-sf,
+    .menu-cs {
+        font-size: 125%;
+    }
 }
